--- a/home.html
+++ b/home.html
@@ -92,8 +92,9 @@ font-size: 14px;
         opacity: 1;
     }
     to {
-        opacity: 0;
-        display: none;
+        /* opacity: 0; */
+        /* display: none; */
+        opacity: 0.5;
     }
 }
 
