--- a/home.html
+++ b/home.html
@@ -94,9 +94,9 @@ font-size: 14px;
         opacity: 1;
     }
     to {
-        opacity: 0;
-        display: none;
-        /* opacity: 0.7; */
+        /* opacity: 0; */
+        /* display: none; */
+        opacity: 0.7;
     }
 }
 
