--- a/home.html
+++ b/home.html
@@ -657,7 +657,7 @@ font-size: 14px;
 
         <p class="disclaimerText" id="size_disclaimerTextId">Each whole pan is enough for approximately 35-38 people</p>
         
-        <p class="disclaimerText" id="ai_disclaimerTextId" style="font-size: 13px;">For transparency: This site used AI imaging for the images seen on the page. If you'd like to see some of the cropped original images used as a reference, please click <a href="original_images.html">here</a></p>
+        <p class="disclaimerText" id="ai_disclaimerTextId" style="font-size: 13px;">For transparency: This site used AI imaging for the images seen on the page. If you'd like to see some of the cropped original images used as a reference, please click <a href="original_images.html" target="_blank">here</a></p>
 
         <div id="qrcode-div-background-id">
             <div id="qrcode-div-id">
