--- a/home.html
+++ b/home.html
@@ -151,10 +151,10 @@ font-size: 14px;
 
     <script>
 
-        const ua = navigator.userAgent;
+        // const ua = navigator.userAgent;
 
-        const isIOS = /iPad|iPhone|iPod/.test(ua) && !window.MSStream;
-        const isMacOS = /Macintosh/.test(ua) && !/iPhone|iPad|iPod/.test(ua);
+        // const isIOS = /iPad|iPhone|iPod/.test(ua) && !window.MSStream;
+        // const isMacOS = /Macintosh/.test(ua) && !/iPhone|iPad|iPod/.test(ua);
 
         // Doesn't show animation for IOS or MacOS...until i can fix the centering/Bezier curve in their system
         // if(isIOS || isMacOS){
