--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
 <body>
 
 
-<!-- <div id="loading_div">
+<div id="loading_div">
     <svg id="e_id" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
         <path
             fill="#D35A21"
@@ -34,7 +34,7 @@
     <svg id="k_id" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
         <polygon points="10,10 30,10 30,40 40,40 65,10 91,10 55,50 91,90 65,90 40,60 30,60 30,90 10,90" fill="#D35A21"></polygon>
     </svg>
-</div> -->
+</div>
 
     <!-- <img id="e_id" src="logo_e.png"></img>
     <img id="k_id" src="logo_k.png"></img> -->
