--- a/original_images.html
+++ b/original_images.html
@@ -17,8 +17,22 @@
 <body>
 
 <div class="top_nav">
-    <h3 style="position: absolute; top: 10%; left: 50%; transform: translate(-50%, -50%);">
-        <a href="home.html">Elsilia's Kitchen</a></h3>
+        <div class="divm">
+        <!-- E -->
+        <svg id="ee" onclick="goHome()" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+           
+            <path stroke="white" stroke-width="5" fill="#121212"
+                d="M10,40 A30,30 0 0 1 40,10 L90,10 L90,30 L40,30 A10,10 0 0 0 30,40 L85,40 L85,60 L30,60 A10,10 0 0 0 40,70 L90,70 L90,90 L40,90 A30,30 0 0 1 10,60 Z" />
+        </svg>
+            <!-- K -->
+        <svg id="kk" onclick="goHome()" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+            <polygon points="10,10 30,10 30,40 40,40 65,10 91,10 55,50 91,90 65,90 40,60 30,60 30,90 10,90"
+                stroke="white" stroke-width="5" fill="#121212"></polygon>
+        </svg>
+
+    </div>
+    <!-- <h3 style="position: absolute; top: 10%; left: 50%; transform: translate(-50%, -50%);"> -->
+        <!-- <a href="home.html">Elsilia's Kitchen</a></h3> -->
 </div>
 
 <h2 style="margin-top: 100px; text-align: center; color: white;">These are the original (cropped) pictures taken right from phones</h2>
@@ -31,6 +45,10 @@
         </div>
 
         <script>
+            function goHome(){
+                window.location.href="https://samuelg900.github.io/ElsiliasKitchen/home.html";
+            }
+
             function closeImageViewer() {
                 document.getElementById('image_viewer_window').style.display = 'none';
             }
@@ -56,9 +74,35 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Lato');
 
+            #ee{
+                
+                height: 100%;
+                width: auto;
+            }
+
+            #kk{
+                height: inherit;
+                width: inherit;
+            }
+
+.divm{
+    display: flex;
+    height: 76px;
+    width: 76px;
+    position: absolute;
+    top: 50%; 
+    left: 50%;
+    transform: translate(-50%, -50%)
+}
+
+.divm path, polygon{
+    cursor: pointer;
+
+}
+
 .top_nav {
     height: 54px;
-    background-color: rgb(42, 42, 42);
+    background-color: #121212;
     display: block;
     position: fixed;
     top: 0;
