--- a/home.html
+++ b/home.html
@@ -554,8 +554,9 @@
                 right: 6px;
                 height: 46px;
                 border-radius: 50px;
+                /* width: 100%; */
                 background-color: white;
-                min-width: 400px;
+                /* min-width: 400px; */
             }
             
             #cir_nav.shadow{
