--- a/home.html
+++ b/home.html
@@ -556,7 +556,7 @@
                 border-radius: 50px;
                 /* width: 100%; */
                 background-color: white;
-                /* min-width: 400px; */
+                /* min-width: 400px; ...388px*/
             }
             
             #cir_nav.shadow{
