implemented new UIs for day-night, shadows, and translate functionality

--- a/original_images.html
+++ b/original_images.html
@@ -170,6 +170,7 @@
         grid-template-columns: repeat(auto-fill, minmax(290px, 2fr));
         gap: 20px;
         margin-inline: 40px;
+        padding-bottom: 100px;
         /* max-width: 1200px; */
     }
 
@@ -210,7 +211,10 @@
         "reduced_food_images/14.png",
         "reduced_food_images/15.png",
         "reduced_food_images/16.png",
-        "reduced_food_images/17.png"
+        "reduced_food_images/17.png",
+        "reduced_food_images/18.png",
+        "reduced_food_images/19.png",
+        "reduced_food_images/20.png"
     ];
 
     // Create the grid container
