--- a/home.html
+++ b/home.html
@@ -78,6 +78,10 @@
             // NIGHT MODE
             if(night){
 
+                // side menu shadow for night
+                document.getElementById('side_menu').classList.remove('side_menu_div_shadowDay');
+                document.getElementById('side_menu').classList.add('side_menu_div_shadowNight');
+
                 // border for cart number night
                 document.getElementById('cart_num_id').style.border=`1px solid ${backDarkColor}`;
                 
@@ -110,6 +114,11 @@
             }
             // DAY MODE
             else{
+
+                // side menu shadow for day
+                document.getElementById('side_menu').classList.remove('side_menu_div_shadowNight');
+                document.getElementById('side_menu').classList.add('side_menu_div_shadowDay');
+
                 // border for cart number light
                 document.getElementById('cart_num_id').style.border=`1px solid ${backLightColor}`;
 
@@ -538,10 +547,22 @@
             left:0;
             z-index: 11;
             background-color: white;
+            box-shadow: 10px 0 10px -10px rgba(0, 0, 0, 0.5);
             overflow: hidden;
             transition: width 0.6s ease, background-color 1s ease;
-            border-right: 1px solid grey;
+            /* border-right: 1px solid grey; */
         }
+
+        .side_menu_div_shadowDay{
+            box-shadow: 10px 0 10px -10px rgba(0, 0, 0, 0.5);
+            transition: box-shadow 0.5s ease;
+        }
+
+        .side_menu_div_shadowNight{
+            box-shadow: 10px 0 10px -10px rgba(255, 255, 255, 0.5);;
+            transition: box-shadow 0.5s ease;
+        }
+
 
         .showMenu{
             width: 300px;
@@ -569,7 +590,6 @@
          .side_menu_item svg{
             transition: transform 0.6s ease;
          }
-
 
         .side_payment_div{
             display: flex;
@@ -921,7 +941,7 @@
 
             .container_slider #usa_dr_ball{
                 transform: translateX(-16px);
-                 background: greenyellow;
+                 background: rgb(151, 224, 43);
             }
 
             .container_slider #usa_dr_ball.changeLang{
@@ -989,7 +1009,7 @@
 
             #usa_dr_ball{
                 transform: translateX(-30px);
-                 background: greenyellow;
+                 background: rgb(151, 224, 43);
             }
 
             #usa_dr_ball.changeLang{
