--- a/home.html
+++ b/home.html
@@ -549,18 +549,16 @@
             background-color: white;
             box-shadow: 10px 0 10px -10px rgba(0, 0, 0, 0.5);
             overflow: hidden;
-            transition: width 0.6s ease, background-color 1s ease;
+            transition: width 0.6s ease, background-color 1s ease, box-shadow 0.6s ease;;
             /* border-right: 1px solid grey; */
         }
 
         .side_menu_div_shadowDay{
             box-shadow: 10px 0 10px -10px rgba(0, 0, 0, 0.5);
-            transition: box-shadow 0.5s ease;
         }
 
         .side_menu_div_shadowNight{
-            box-shadow: 10px 0 10px -10px rgba(255, 255, 255, 0.5);;
-            transition: box-shadow 0.5s ease;
+            box-shadow: 10px 0 10px -10px rgba(255, 255, 255, 0.5);
         }
 
 
