--- a/home.html
+++ b/home.html
@@ -985,7 +985,7 @@
             .container_slider_menu img{
                 border-radius: 5px;
                 height: 46%;
-                /* margin-inline: 5px; */
+                margin-inline: auto;
                 /* z-index: 1; */
             }
 
