--- a/home.html
+++ b/home.html
@@ -964,7 +964,7 @@
              .container_slider img{
                 border-radius: 2px;
                 height: 45%;
-                /* margin-inline: 5px; */
+                margin-inline: auto;
                 /* z-index: 1; */
             }
 
