--- a/404.html
+++ b/404.html
@@ -170,6 +170,10 @@ function getItemsNames(){
     return true;
 }
 
+function goHome(){
+                window.location.href="https://samuelg900.github.io/ElsiliasKitchen/home.html";
+            }
+
 
 window.onload = function() {
 
@@ -309,7 +313,7 @@ if (match) {
 
             <p>Oh no! Oops! OMG! Seems like there's an issue with this order's URL</p>
 
-            <button href="/home.html">
+            <button onclick="goHome()">
                 Go Back to Homepage
             </button>
 
