--- a/home.html
+++ b/home.html
@@ -549,6 +549,7 @@
             width: 0;
             height: 100%;
             position: fixed;
+            min-height: 650px;
             top: 0;
             left:0;
             z-index: 11;
@@ -858,7 +859,7 @@
 
 
 
-<div id="side_menu" class="side_menu_div back_dn">
+<div id="side_menu" class="back_dn side_menu_div">
 
     
     <div class="side_menu_item">
