--- a/404.html
+++ b/404.html
@@ -107,7 +107,7 @@
             <div id="payment_menu_id">
                 <span class="closeIcon" onclick='openPayment("x")'>&times;</span>
                 <a id="pay_text"></a>
-                <div id="paymentQr_id"></div>
+                <div style="border: 4px solid white;" id="paymentQr_id"></div>
             </div>
         </div>
 
