--- a/home.html
+++ b/home.html
@@ -546,13 +546,12 @@
                         document.getElementById('p_for_saved_message').innerHTML = `Note:<br>${savedMessage}`;
                 }
 
-                document.getElementById('p_for_saved_message').style="display:block; font-size:12px; font-style: italic; text-align: center; margin: 10px 20px; overflow-wrap: break-word; word-break: break-all";
+                document.getElementById('p_for_saved_message').style="display:block; font-size:12px; font-style: italic; text-align: center; margin: 20px 20px; overflow-wrap: break-word; word-break: break-all";
             }
             else
                 document.getElementById('p_for_saved_message').style.display='none';
 
             document.querySelector('.cart').classList.toggle('open');
-
 
             document.body.style.overflow = "hidden";
                  
@@ -1927,12 +1926,13 @@ document.getElementById("pie_container").appendChild(pie);
                 <span class="text_dn close_qrcode_window" onclick="closeQRWindow()">&times;</span>
                 <h1 id="qrTitleId">Elsilia's Kitchen Order</h1>
                 <div style="border: 4px solid white;" id="qrcode"></div>
-                <p id="qrTextId">Por favor copia el enlace del pedido abajo o guarda este código QR y envíaselo a Elsa para recibir la confirmación del pedido y programar una fecha</p>
+                <p id="qrTextId">Please copy order link below or save this QR code and send it to <strong>Elsa</strong> to get order confirmation and set up an order date</p>
+                    <!-- Por favor copia el enlace del pedido abajo o guarda este código QR y envíaselo a Elsa para recibir la confirmación del pedido y programar una fecha</p> -->
                     <!-- Copy link below or save QR code and send to <strong>Elsa</strong> for confirm your order and set up order
                     date -->
                 <p id="p_for_saved_message" style="display:none"></p>
                 <button id="save-qr-button" onclick="generatePdf()">Save QR Code</button>
-                <button id="save-order-link-button" onclick="copyToClipboard()">Copy Order Link</button>
+                <button id="save-order-link-button" onclick="copyToClipboard()">Copy Link</button>
                 <div id="copyNotificationId">Link copied successfully!</div>
             </div>
         </div>
