--- a/home.html
+++ b/home.html
@@ -1140,6 +1140,9 @@
                 border-radius: 50px;
                 min-width: 380px;
                 background-color: inherit;
+
+                /* border: 2px solid darkslategray;
+                border-top: 0; */
             }
             
             .cir_nav_shadowDay{
